2006-03-08  David Bateman  <dbateman@free.fr>

	* SparseCmplxQR.cc: Updates for new upstream CXSPARSE release. Fix for
	g++ 4.x stl_vector.h issue with C99 double _Complex type.
	* SparseCmplxQR.h:  Updates for new upstream CXSPARSE release.
	* SparseQR.cc: ditto.
	* SparseQR.h: ditto.
	* oct-sparse.h: ditto.
	* sparse-base-chol.cc (sparse_base_chol<>::sparse_base_chol_rep::init):
	Declare info variable as volatile.

	* Sparse.cc (Sparse<T>::transpose (void) const): Accelerate algorithm.
	* CSparse.cc (SparseComplexMatrix::transpose (void) const): ditto.
	
2006-03-01  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc (ComplexMatrix::determinant):
	Scale result by factors of 2, not 10.
	* dMatrix.cc (Matrix::determinant): Likewise.

	* dbleDET.h (DET::DET): Use initializer list.
	(DET::coefficient2, DET::coefficient10, DET::exponent2,
	DET::exponent10): New functions.
	(DET::det): Delete.
	(DET::c2, DET::c10, DET::e2, DET::e10, DET::base2): New data members.
	Store value internally with double and int instead of 2-element
	double vector.
	(DET::initialize2, DET::initialize10): Provide decls.
	* dbleDET.cc (DET::value_will_overflow,	DET::value_will_underflow): 
	Return bool value, not int.
	(DET::initialize2, DET::initialize10): New functions.

	* CmplxDET.h (ComplexDET::ComplexDET): Use initializer list.
	(ComplexDET::coefficient2, ComplexDET::coefficient10,
	ComplexDET::exponent2, ComplexDET::exponent10): New functions.
	(ComplexDET::det): Delete.
	(ComplexDET::c2, ComplexDET::c10, ComplexDET::e2, ComplexDET::e10,
	ComplexDET::base2): New data members.
	Store value internally with Complex and int instead of 2-element
	Complex vector.
	(ComplexDET::initialize2, ComplexDET::initialize10): Provide decls.
	* dbleComplexDET.cc (ComplexDET::value_will_overflow,
	ComplexDET::value_will_underflow): Return bool value, not int.
	(ComplexDET::initialize2, ComplexDET::initialize10): New functions.

2006-02-24  John W. Eaton  <jwe@octave.org>
